make my profile prettier

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 
   <div class="footer">
-    <div class="green_square">
+    <div class="green_square animation-target">
       <img src="images/green_square.jpg" alt="green_square">
     </div>
   </div>
