make my profile prettier

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   </div>
 
   <div class="footer">
-    <div class="green_square animation-target">
-      <img src="images/green_square.jpg" alt="green_square">
+    <div class="green_square">
+      <img class="slide-top" src="images/green_square.jpg" alt="green_square">
     </div>
   </div>
 </body>
